Fix PrettyCity text cutoff and reduce image stretch, create media queries for ipad and imac home screen

--- a/client/src/Books/prettyCity/style.css
+++ b/client/src/Books/prettyCity/style.css
@@ -1,44 +1,16 @@
-.page {
+
+.pretty-text {
+    font-size: 40px;
+    color: black;
+    font-family: 'Cabin', sans-serif;
     position: relative;
-    
 }
-/* .pages{
-    margin-top: 7%;
-} */
-/* .page-image {
-} */
 
-.page-text {
-    font-size: 38px;
-    color: rgb(141, 33, 151);
-}
-.kids {
-    height: 300px;
-    z-index: 11;
-    position: absolute;
-    margin-top: 250px;
-    margin-left: 50px;
-}
-.bin {
-    height: 250px;
-    z-index: 11;
-    position: absolute;
-    bottom: 320px;
-    right: 30px;
-}
-/* .trash1 {
-    height: 100px;
-    z-index: 11;
-    position: absolute;
-    margin-top: 100px;
-    margin-left: 350px;
-} */
-
-.main {
+/* .main {
     z-index: 10;
-    /* max-height: 670px; */
-    /* max-width: 960px; */
-}
+    max-height: 1238px;
+    max-width: 960px;
+} */
 
 .pc-one {
     height: 100px;
@@ -170,5 +142,23 @@
 
 .imgs{
     height:auto;
-    width:100% ;
+    max-width:100%;
 }
+
+@media only screen and (max-height: 768px) {
+    .pretty-text {
+        font-size: 28px;
+    }
+
+    .imgs{
+        height:auto;
+        max-width:1238px;
+    }
+  }
+
+
+@media only screen and (max-width: 640px) {
+    .pretty-text {
+        font-size: 22px;
+    }
+  }
